fixing distorted image in profile pic

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -56,6 +56,7 @@
     width: 40px;
     border-radius: 50%;
     margin-right: 0.5rem;
+    object-fit: cover;
   }
 
   .navbar-brand {
